tests/errors/err_for_loop_reassign.mix
// ERROR: cannot assign to immutable variable 'i'
main()
    for i in 0..3
        i! += 1
